--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "vue-month-picker",
-  "version": "1.7.1",
+  "name": "vue-simple-month-picker",
+  "version": "1.0.0",
   "main": "src/index.js",
   "description": "A simple and elegant month picker for Vue",
   "scripts": {
@@ -15,13 +15,12 @@
     "picker"
   ],
   "author": {
-    "name": "Andreas Rein",
-    "email": "rein@live.no",
-    "url": "https://www.andreasrein.net/"
+    "name": "Gabriel Teodósio",
+    "email": "gabrieltmm@gmail.com"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/kleinrein/vue-month-picker.git"
+    "url": "git+https://github.com/gabrielteodosio/vue-month-picker.git"
   },
   "license": "MIT",
   "devDependencies": {
